tests/snapshots/run_wpt_conformance__litert_layerNormalization_float16_4D_tensor_options_bias.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float16 4D tensor options.bias, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: LayerNormalization { input: 1, options: Some(MLLayerNormalizationOptions { label: "", scale: None, bias: Some(0), axes: None, epsilon: 1e-5 }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f16[2, 1, 4, 3];
  }

  consts {
    operand_0: f16[1, 4, 3] @bytes([221, 71, 82, 195, 245, 198, 102, 198, 138, 66, 128, 193, 21, 196, 35, 199, 60, 72, 134, 65, 150, 58, 168, 195]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=0, epsilon=0.00001, label="", scale=null);
  }

  outputs { layerNormOutput; }
}
