tests/snapshots/run_wpt_conformance__litert_layerNormalization_float16_4D_tensor_options_epsilon.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float16 4D tensor options.epsilon, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: LayerNormalization { input: 0, options: Some(MLLayerNormalizationOptions { label: "", scale: None, bias: None, axes: None, epsilon: 0.0001 }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f16[2, 1, 4, 3];
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=null, epsilon=0.0001, label="", scale=null);
  }

  outputs { layerNormOutput; }
}
