tests/snapshots/run_wpt_conformance__litert_layerNormalization_float32_4D_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float32 4D tensor all options, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f32[2, 1, 4, 3];
  }

  consts {
    operand_0: f32[2, 3, 1] @bytes([234, 94, 11, 193, 77, 147, 244, 192, 80, 0, 158, 64, 220, 2, 12, 192, 226, 41, 130, 192, 153, 194, 218, 192]);
    operand_2: f32[2, 3, 1] @bytes([223, 232, 246, 64, 142, 89, 222, 63, 3, 60, 18, 65, 72, 72, 184, 64, 46, 120, 52, 192, 76, 203, 47, 191]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=[0, 3, 1], bias=0, epsilon=0.0001, label="", scale=2);
  }

  outputs { layerNormOutput; }
}
