tests/snapshots/run_wpt_conformance__litert_layerNormalization_float32_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float32 4D tensor default options, litert
 layer_normalization :: layerNormalization float32 4D tensor default options: index 0: actual=-1.3049144 expected=-1.405726 ulp=845669 tolerance=16
  inputs: layerNormInput: [-35.51446533203125, 54.735408782958984, 19.659019470214844, -15.882678031921388, 65.48657989501953, 25.818492889404297, 97.5530242919922, -8.057161331176758, 62.9412956237793, -48.91555404663086, 91.90644073486328, 46.67098617553711, -74.85331726074219, 30.126361846923828, 26.13089370727539, 59.30270767211914, -60.36199569702149, 18.55615234375, -88.03730773925781, -26.5667724609375, 70.81292724609375, 9.10561180114746, 56.66746139526367, 21.78444480895996]
  expected layerNormOutput: [-1.405726, 0.53964555, -0.21643977, -0.98255503, 0.7713913, -0.08366991, 1.462596, -0.81387293, 0.7165267, -1.6945916 ...] (len=24)
  actual layerNormOutput: [-1.3049144, 1.1245788, 0.18033546, -1.2348169, 1.2144182, 0.02039877, 1.0632559, -1.3391645, 0.27590835, -1.3424098 ...] (len=24)
  expected layerNormOutput full nd:
[-1.405726, 0.53964555, -0.21643977, -0.98255503, 0.7713913, -0.08366991, 1.462596, -0.81387293, 0.7165267, -1.6945916, ...] (len=24, shape=[2, 1, 4, 3])
  actual layerNormOutput full nd:
[-1.3049144, 1.1245788, 0.18033546, -1.2348169, 1.2144182, 0.02039877, 1.0632559, -1.3391645, 0.27590835, -1.3424098, ...] (len=24, shape=[2, 1, 4, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f32[2, 1, 4, 3];
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { layerNormOutput; }
}
