tests/snapshots/run_wpt_conformance__litert_layerNormalization_float32_4D_tensor_options_bias.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float32 4D tensor options.bias, litert
 layer_normalization :: layerNormalization float32 4D tensor options.bias: index 0: actual=6.5580683 expected=6.457257 ulp=211417 tolerance=16
  inputs: layerNormInput: [-35.51446533203125, 54.735408782958984, 19.659019470214844, -15.882678031921388, 65.48657989501953, 25.818492889404297, 97.5530242919922, -8.057161331176758, 62.9412956237793, -48.91555404663086, 91.90644073486328, 46.67098617553711, -74.85331726074219, 30.126361846923828, 26.13089370727539, 59.30270767211914, -60.36199569702149, 18.55615234375, -88.03730773925781, -26.5667724609375, 70.81292724609375, 9.10561180114746, 56.66746139526367, 21.78444480895996]; layerNormBias: [7.862982749938965, -3.66030478477478, -6.955524444580078, -6.397322654724121, 3.268958568572998, -2.7498080730438232, -4.080942153930664, -7.137991905212402, 8.465653419494629, 2.762545108795166, 0.8230442404747009, -3.827561378479004] (constant)
  expected layerNormOutput: [6.457257, -3.120659, -7.171964, -7.3798776, 4.04035, -2.833478, -2.618346, -7.9518647, 9.18218, 1.0679535 ...] (len=24)
  actual layerNormOutput: [6.5580683, -2.535726, -6.775189, -7.6321397, 4.4833765, -2.7294092, -3.0176864, -8.477157, 8.741562, 1.4201353 ...] (len=24)
  expected layerNormOutput full nd:
[6.457257, -3.120659, -7.171964, -7.3798776, 4.04035, -2.833478, -2.618346, -7.9518647, 9.18218, 1.0679535, ...] (len=24, shape=[2, 1, 4, 3])
  actual layerNormOutput full nd:
[6.5580683, -2.535726, -6.775189, -7.6321397, 4.4833765, -2.7294092, -3.0176864, -8.477157, 8.741562, 1.4201353, ...] (len=24, shape=[2, 1, 4, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f32[2, 1, 4, 3];
  }

  consts {
    operand_0: f32[1, 4, 3] @bytes([142, 157, 251, 64, 111, 66, 106, 192, 168, 147, 222, 192, 222, 182, 204, 192, 158, 54, 81, 64, 219, 252, 47, 192, 20, 151, 130, 192, 110, 106, 228, 192, 81, 115, 7, 65, 138, 205, 48, 64, 7, 179, 82, 63, 196, 246, 116, 192]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=0, epsilon=0.00001, label="", scale=null);
  }

  outputs { layerNormOutput; }
}
